--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
-    "wowjs": "^1.1.3"
+    "react-select": "^5.8.0",
+    "wowjs": "^1.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
